--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -32,7 +32,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:src="@drawable/v1"
-        android:layout_centerVertical="true"
+        android:layout_below="@+id/text_2"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
